--- a/src/main/resources/app/dashboard.fxml
+++ b/src/main/resources/app/dashboard.fxml
@@ -9,17 +9,13 @@
     <BorderPane fx:id="mainBorderPane" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
 
         <top>
-            <HBox alignment="CENTER" prefHeight="60" spacing="20"
-                  style="-fx-background-color: white;
-            -fx-border-color: #e0e0e0;
-            -fx-border-width: 0 0 1 0;">
+            <HBox alignment="CENTER" prefHeight="60" spacing="20" style="-fx-background-color: white;             -fx-border-color: #e0e0e0;             -fx-border-width: 0 0 1 0;">
 
                 <padding>
-                    <Insets top="20" left="20" bottom="20" />
+                    <Insets bottom="20" left="20" top="20" />
                 </padding>
 
-                <Label style="-fx-font-size: 30; -fx-font-weight: bold; -fx-text-fill: #4f5dff"
-                       text="eDiploma" />
+                <Label style="-fx-font-size: 30; -fx-font-weight: bold; -fx-text-fill: #4f5dff" text="eDiploma" />
             </HBox>
         </top>
 
@@ -28,58 +24,30 @@
             <VBox prefWidth="240" spacing="4.0" style="-fx-background-color: #ffffff; -fx-border-color: #e0e0e0; -fx-border-width: 0 1 0 0;">
 
                 <padding>
-                    <Insets top="30.0" bottom="20.0" />
+                    <Insets bottom="20.0" top="30.0" />
                 </padding>
 
 
-                <Label fx:id="radoviLabel" onMouseClicked="#handleRadoviClick" text="Završni radovi"
-                       style="-fx-cursor: hand;
-                              -fx-padding: 12 20 12 20;
-                              -fx-font-size: 14;
-                              -fx-font-weight: 500;
-                              -fx-text-fill: #424242;
-                              -fx-background-radius: 8;
-                              -fx-background-color: transparent;">
+                <Label fx:id="radoviLabel" onMouseClicked="#handleRadoviClick" style="-fx-cursor: hand;                               -fx-padding: 12 20 12 20;                               -fx-font-size: 14;                               -fx-font-weight: 500;                               -fx-text-fill: #424242;                               -fx-background-radius: 8;                               -fx-background-color: transparent;" text="Završni radovi">
                     <VBox.margin>
                         <Insets left="12.0" right="12.0" />
                     </VBox.margin>
                 </Label>
 
-                <Label fx:id="studentiLabel" onMouseClicked="#handleStudentiClick" text="Studenti"
-                       style="-fx-cursor: hand;
-                              -fx-padding: 12 20 12 20;
-                              -fx-font-size: 14;
-                              -fx-font-weight: 500;
-                              -fx-text-fill: #424242;
-                              -fx-background-radius: 8;
-                              -fx-background-color: transparent;">
+                <Label fx:id="studentiLabel" onMouseClicked="#handleStudentiClick" style="-fx-cursor: hand;                               -fx-padding: 12 20 12 20;                               -fx-font-size: 14;                               -fx-font-weight: 500;                               -fx-text-fill: #424242;                               -fx-background-radius: 8;                               -fx-background-color: transparent;" text="Studenti">
                     <VBox.margin>
                         <Insets left="12.0" right="12.0" />
                     </VBox.margin>
                 </Label>
 
-                <Label fx:id="mentoriLabel" onMouseClicked="#handleMentoriClick" text="Mentori"
-                       style="-fx-cursor: hand;
-                              -fx-padding: 12 20 12 20;
-                              -fx-font-size: 14;
-                              -fx-font-weight: 500;
-                              -fx-text-fill: #424242;
-                              -fx-background-radius: 8;
-                              -fx-background-color: transparent;">
+                <Label fx:id="mentoriLabel" onMouseClicked="#handleMentoriClick" style="-fx-cursor: hand;                               -fx-padding: 12 20 12 20;                               -fx-font-size: 14;                               -fx-font-weight: 500;                               -fx-text-fill: #424242;                               -fx-background-radius: 8;                               -fx-background-color: transparent;" text="Mentori">
                     <VBox.margin>
                         <Insets left="12.0" right="12.0" />
                     </VBox.margin>
                 </Label>
 
                 <!-- NEW: Secretaries -->
-                <Label fx:id="sekretariLabel" onMouseClicked="#handleSekretariClick" text="Sekretari"
-                       style="-fx-cursor: hand;
-                              -fx-padding: 12 20 12 20;
-                              -fx-font-size: 14;
-                              -fx-font-weight: 500;
-                              -fx-text-fill: #424242;
-                              -fx-background-radius: 8;
-                              -fx-background-color: transparent;">
+                <Label fx:id="sekretariLabel" onMouseClicked="#handleSekretariClick" style="-fx-cursor: hand;                               -fx-padding: 12 20 12 20;                               -fx-font-size: 14;                               -fx-font-weight: 500;                               -fx-text-fill: #424242;                               -fx-background-radius: 8;                               -fx-background-color: transparent;" text="Sekretari">
                     <VBox.margin>
                         <Insets left="12.0" right="12.0" />
                     </VBox.margin>
@@ -89,18 +57,11 @@
 
                 <Separator style="-fx-background-color: #f0f0f0;">
                     <VBox.margin>
-                        <Insets left="20.0" right="20.0" bottom="16.0" />
+                        <Insets bottom="16.0" />
                     </VBox.margin>
                 </Separator>
 
-                <Label fx:id="lblOdjava" onMouseClicked="#handleLogout" text="Odjava"
-                       style="-fx-cursor: hand;
-                              -fx-font-size: 14;
-                              -fx-font-weight: 600;
-                              -fx-text-fill: #d32f2f;
-                              -fx-padding: 12 20 12 20;
-                              -fx-background-radius: 8;
-                              -fx-background-color: transparent;">
+                <Label fx:id="lblOdjava" onMouseClicked="#handleLogout" style="-fx-cursor: hand;                               -fx-font-size: 14;                               -fx-font-weight: 600;                               -fx-text-fill: #d32f2f;                               -fx-padding: 12 20 12 20;                               -fx-background-radius: 8;                               -fx-background-color: transparent;" text="Odjava">
                     <VBox.margin>
                         <Insets left="12.0" right="12.0" />
                     </VBox.margin>
